# ai-tracker

./: .gitignore  README.md  agent-config.example.json
.github/workflows/: ci.yml  release.yml
docs/: claude-hooks-skills-guide.md
docs/plans/: 2026-01-30-history-feature-design.md  2026-02-01-rust-tui-workspace-design.md  2026-02-02-web-console-design.md  2026-02-03-archive-history-enhancement-design.md  2026-02-03-fix-history-display-design.md  2026-02-04-mobile-responsive-design.md  2026-02-05-web-image-upload-design.md  2026-02-07-timeline-search-enhancement.md  2026-02-09-livechat-interaction-sync.md  2026-02-11-aitracker-per-project-storage.md  2026-02-12-event-stream-realtime-monitoring.md  2026-02-14-project-settings-polish.md  2026-02-14-projects-hub-design.md  2026-02-14-worktree-port-isolation-design.md  2026-02-14-worktree-port-isolation-impl.md  2026-02-15-project-timeline-design.md  2026-02-15-tauri-menubar-design.md  2026-02-15-tauri-menubar-impl.md  2026-02-21-timeline-grouped-view-design.md  2026-02-23-self-contained-tauri-app-design.md  2026-02-23-self-contained-tauri-app-impl.md  2026-03-01-hook-todo-capture-design.md
docs/superpowers/plans/: 2026-03-17-totp-auth.md  2026-03-18-hook-full-tracking.md  2026-03-31-timeline-data-integrity.md  2026-04-25-openai-compatible-proxy.md
docs/superpowers/specs/: 2026-03-17-totp-auth-design.md  2026-03-18-hook-full-tracking-design.md
scripts/: agent-event.sh  agent-hook.sh  agent-tracker.service  deploy.sh  env.sh  focus_last_origin.sh  focus_latest_notified.sh  install.sh  notify.py  pane-status.sh  reparse_history.py  service.sh  setup.sh  tracker
src/rust/: Cargo.toml  PLAN.md  README.md
src/rust/crates/tracker-core/: Cargo.toml
src/rust/crates/tracker-core/src/: ipc.rs  lib.rs  types.rs
src/rust/crates/tracker-server/: Cargo.toml
src/rust/crates/tracker-server/src/: agent.rs  browser.rs  chat_watcher.rs  config.rs  db.rs  env_file.rs  layout.rs  main.rs  pane_registry.rs  paths.rs  port.rs  project_db.rs  routes_auth.rs  routes_history.rs  routes_hook.rs  routes_openai.rs  routes_projects.rs  routes_tmux.rs  routes_totp.rs  routes_workspace.rs  stream.rs  transcript.rs  workspace.rs
src/rust/crates/tracker-tui/: Cargo.toml
src/rust/crates/tracker-tui/src/: agent.rs  client.rs  config.rs  main.rs  workspace.rs
tauri-menubar/: index.html  package-lock.json  package.json
tauri-menubar/scripts/: prepare-sidecar.sh
tauri-menubar/src/: App.tsx  FloatingBar.tsx  LoginView.tsx  MenuBarPanel.tsx  index.css
tauri-menubar/src-tauri/: Cargo.toml  tauri.conf.json
tauri-menubar/src-tauri/capabilities/: default.json
tauri-menubar/src-tauri/icons/: icon.icns
tauri-menubar/src-tauri/src/: lib.rs  main.rs
tauri-menubar/src/hooks/: useTrackerState.ts
tauri-menubar/src/shared/: types.ts
tauri-menubar/src/shared/services/: auth.ts  dataMapper.ts  helpers.ts  state.ts  tmux.ts
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/dist.bak/: index.html
web/dist.bak/assets/: index-CGcPOfTr.js  index-Cm8ljZRC.css
web/src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
web/src/components/: AIAnalyst.tsx  AIAnalystView.tsx  AddWindowModal.tsx  CRTWrapper.tsx  ChatHistoryModal.tsx  ChatTimeline.tsx  CloseWindowModal.tsx  CommandPalette.tsx  ConfirmationModal.tsx  ConsoleView.tsx  ErrorBoundary.tsx  HistoryChart.tsx  HistoryDetailModal.tsx  InputModal.tsx  LoginView.tsx  MarkdownText.tsx  ProjectSettings.tsx  ProjectTimeline.tsx  ProjectsView.tsx  SearchHighlight.tsx  SettingsView.tsx  SetupBanner.tsx  StatusGauge.tsx  Terminal.tsx  TimelineView.tsx  ToolCallBlock.tsx  WorkstationsView.tsx
web/src/hooks/: useSearch.ts
web/src/services/: api.ts  auth.ts  claude.ts  dataMapper.ts  diagnostics.ts  git.ts  helpers.ts  history.ts  projects.ts  setup.ts  state.ts  tmux.ts  workspace.ts
web/src/test/: AIAnalystView.test.tsx  CommandPalette.test.tsx  SearchHighlight.test.tsx  SettingsView.test.tsx  constants.test.ts  dataMapper.test.ts  helpers.test.ts
参考/web/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  types.ts
参考/web/components/: AIAnalyst.tsx  CRTWrapper.tsx  ChatHistoryModal.tsx  ConfirmationModal.tsx  ConsoleView.tsx  InputModal.tsx  LoginView.tsx  SettingsView.tsx  Terminal.tsx  TimelineView.tsx  WorkstationsView.tsx
参考/web/services/: mockService.ts
