[workspace]
resolver = "2"
members = [
    "crates/tracker-core",
    "crates/tracker-server",
    "crates/tracker-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["heygo"]
license = "MIT"
repository = "https://github.com/heygo/agent-tracker"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Web
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "set-header"] }
tokio-tungstenite = "0.24"

# Database
rusqlite = { version = "0.32", features = ["bundled", "hooks"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
dirs = "6"
regex = "1"
libc = "0.2"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
jsonwebtoken = "10"
url = "2"
totp-rs = { version = "5", features = ["otpauth", "gen_secret"] }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
