[package]
name = "agent-tracker-menubar"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_tracker_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
raw-window-handle = "0.6"
window-vibrancy = "0.6"
