[package]
name = "tracker-server"
description = "Agent Tracker HTTP/WebSocket server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tracker-server"
path = "src/main.rs"

[dependencies]
tracker-core = { path = "../tracker-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Web framework
axum = { workspace = true }
futures-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-tungstenite = { workspace = true }

# Database
rusqlite = { workspace = true }

# Utils
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
libc = { workspace = true }
