[package]
name = "tracker-tui"
description = "Agent Tracker TUI client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tracker-tui"
path = "src/main.rs"

[[bin]]
name = "tracker-client"
path = "src/main.rs"

[dependencies]
tracker-core = { path = "../tracker-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Utils
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
